--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -11,3 +11,9 @@ two:
   description: MyText
   image_url: MyString
   price: 9.99
+
+ruby:
+  title: Programming Ruby
+  description: Ruby is the best language in the world!
+  price: 49.50
+  image_url: ruby.png
